<resources>
    <string name="app_name">PasKita</string>
    <string name="title_welcome_page">Jauh Di Mata Dekatkan Rasa</string>
    <string name="message_welcome_page">Obati rindu kampung halamanmu dengan ragam kuliner khas dari daerah kesayanganmu dengan harga dan rasa yang sama, tunggu apalagi yuk belanja sekarang!</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="atau_login">atau login pakai</string>
    <string name="atau_daftar">atau daftar pakai</string>
    <string name="title_signup_page">Belum Punya Akun?</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="title_login_page">Selamat Datang,</string>
    <string name="message_login_page">Silahkan Login Terlebih Dahulu</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="lupa_password_message">Jangan Khawatir, Masukkan Alamat Email Yang Terkait Dengan Akun Di Bawah Ini</string>
    <string name="ubah_password_message">Silahkan Masukkan Alamat Email Yang Terkait Dengan Akun Di Bawah Ini Ya</string>
    <string name="kirim">Kirim</string>
    <string name="default_web_client_id">846597218623-figvhnijrg5me3cle4orjguhtt4v3l0d.apps.googleusercontent.com</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="lengkapi_data_diri">Lengkapi Data Dirimu Dibawah Ini Ya</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_kategori">Kategori</string>
    <string name="title_Keranjang">Keranjang</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">chat</string>
    <string name="user">user</string>
    <string name="keluar">Keluar</string>
    <string name="daftar_menjadi_penjual">Daftar Menjadi Penjual</string>
    <string name="selamat_datang">Halo, Selamat Datang. Sebelum Mulai Berbelanja Silahkan Siapkan Akun Anda Terlebih Dahulu</string>
    <string name="belum_punya_akun">Belum Punya Akun? Daftar Sekarang</string>
    <string name="sudah_punya_akun">Sudah Punya Akun? Login Sekarang</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="data_pribadi">Lengkapi Data Pribadi Anda</string>
    <string name="tidak_ada">-</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="alamat">Alamat</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="provinsi">Provinsi</string>
    <string name="cari_produk">cari produk</string>
    <string name="favorite">Favorite</string>
    <string name="micrphone">Micrphone</string>
    <string name="kategori">Kategori</string>
    <string name="makanan">Makanan</string>
    <string name="minuman">Minuman</string>
    <string name="kerajinan">Kerajinan</string>
    <string name="sambal">Sambal</string>
    <string name="populer_baru_baru_ini">Populer Baru-baru ini</string>
    <string name="info_pribadi">Info Pribadi</string>
    <string name="barang_favorite">Barang Favorite</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="edit_info_pribadi">Edit Info Pribadi</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="foto_profile_toko">Foto Profile Toko</string>
    <string name="upload_foto">Upload Foto Baru</string>
    <string name="domisili">Domisili</string>
    <string name="simpan">Simpan</string>
    <string name="cari_transaksi">cari transaksi</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="bantuan">Bantuan</string>
    <string name="butuh_bantuan">Butuh Bantuan?</string>
    <string name="jangan_khawatir_silahkan_isi_masalahmu_di_bawah_ya">Jangan Khawatir, Silahkan Isi Kendala Anda Di Bawah Ya</string>
    <string name="kendalaku">Kendalaku</string>
    <string name="masukkan_kendalan_anda">Masukkan Kendala Anda</string>
    <string name="akun">Akun</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="tema_aplikasi">Tema Aplikasi</string>
    <string name="ubah_password">Ubah Password?</string>
    <string name="apa_itu_paskita">Apa Itu PasKita?</string>
    <string name="tentang_kami_message">PasKita adalah aplikasi marketplace untuk membantu dan mendukung UMKM kecil dan menengah di indonesia yang berfokus pada oleh-oleh (souvenirs) khas daerah dari berbagai daerah indonesia dengan menjamin keorisinilan produk yang kami pasarkan. \n\nKeuntungan PasKita Sebagai User? \nUser dapat berbelanja dengan tenang dan aman karena kami menjamin keorisinilan dari setiap produk yang kami pasarkan \n\nKeuntungan PasKita Sebagai Penjual? \nKami Membantu Penjual Untuk Membuat Tampilan Foto Produk Mereka Menjadi Lebih Menarik Dengan Machine Learning yang kami kembangkan.</string>
    <string name="daftar_sebagai_penjual">Daftar Sebagai Penjual</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="alamat_toko">Alamat Toko</string>
    <string name="deskripsi_toko">Deskripsi Toko</string>
    <string name="verifikasi_berkas_ktp">Verifikasi Berkas (KTP)</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="nomor_rekening">7187496009</string>
    <string name="kembali">kembali</string>
    <string name="setuju_mendaftar">Saya setuju untuk mendaftar sebagai penjual di PasKita dan akan menjamin setiap produk yang saya pasarkan di PasKita adalah produk orisinil</string>
    <string name="edit_profile_toko">Edit Profile Toko</string>
    <string name="total_produk">Total Produk</string>
    <string name="nol">0</string>
    <string name="terjual">Terjual</string>
    <string name="fabadd">fabAdd</string>
    <string name="foto_produk">Foto Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="kategori_produk">Kategori Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="asal_daerah_produk">Asal Daerah Produk</string>
    <string name="produk_khas_daerah">Produk Khas Daerah</string>
    <string name="layanan_pengiriman_tersedia">Layanan Pengiriman Tersedia</string>
    <string name="pisahkan_dengan_tanda_koma">Pisahkan Dengan Tanda Koma (,)</string>
    <string name="upload_foto_produk_anda">Upload Foto Produk Anda</string>
    <string name="jadikan_foto_diatas_sebagai_foto_produk_saya">Jadikan Foto Diatas Sebagai Foto Produk Saya</string>
    <string name="generate_foto_produk">Generate Foto Produk</string>
    <string name="kata_kata_promosi_produk">Kata-kata Promosi Produk</string>
    <string name="lebih_dari_10_kata">Contoh : Renyah Dimulut Asli Rasanya</string>
    <string name="sosial_media">Sosial Media</string>
    <string name="instagram">Instagram</string>
    <string name="contoh_instagram">contoh : @instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="no_whatsapp">No Whatsapp</string>
    <string name="tiktok">Tiktok</string>
    <string name="generate">Generate</string>
    <string name="hasil_generate">Hasil Generate</string>
    <string name="silahkan_pilih_dan_download_lalu_upload_di_seluruh_sosial_media_anda">Silahkan Pilih Dan Download Lalu Upload Di Seluruh Sosial Media Anda</string>
    <string name="download">Download</string>
    <string name="saya_menjamin_bahwa_produk_yang_akan_saya_pasarkan_di_paskita_adalah_produk_orisinil">Saya Menjamin Bahwa Produk Yang Akan Saya Pasarkan Di PasKita Adalah Produk Orisinil</string>
    <string name="produk_saya_merupakan_produk_umkm_kecil_dan_menengah">Produk Saya Merupakan Produk UMKM Kecil Dan Menengah</string>
    <string name="saya_merupakan_umkm_kecil_dan_menengah">Saya Merupakan UMKM Kecil dan Menengah</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="contoh_tiktok">contoh : @tiktok</string>
    <string name="beberapa_foto">Tambahkan Beberapa Foto Yang Mendukung Keorisinilan Produk Anda Seperti (Saat Proses Pembuatan)</string>
    <string name="foto_produk_pendukung_1">Foto Produk Pendukung 1</string>
    <string name="foto_produk_pendukung_2">Foto Produk Pendukung 2</string>
    <string name="foto_produk_pendukung_3">Foto Produk Pendukung 3</string>
    <string name="rp">"Rp. "</string>
    <string name="produk_toko">Produk Toko</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="rating">belum ada rating</string>
    <string name="_0_terjual">| 0 Terjual</string>
    <string name="informasi_barang">Informasi Barang</string>
    <string name="nama_penjual">Nama Penjual</string>
    <string name="satu">1</string>
    <string name="total">Total</string>
    <string name="belum_termasuk_ongkir">*Belum Termasuk Ongkir</string>
    <string name="beli">Beli</string>
    <string name="rp1_000_000">Rp1.000.000</string>
    <string name="nama_toko_alamat">Nama Toko - Alamat</string>
    <string name="masukkan_keranjang">Masukkan Keranjang</string>
    <string name="pilih_semua">Pilih Semua</string>
    <string name="_1_produk_terpilih">1 Produk Terpilih</string>
    <string name="cari_produk_dengan_gambar">Cari Oleh-Oleh (Souvenirs) Dengan Gambar</string>
    <string name="upload_gambar_produk_yang_kamu_cari_dibawah_ini">Upload gambar produk yang kamu cari dibawah ini dan kamu akan mendapatkan fun fuct tentang gambar souvenir yang kamu cari dan Penjual di PasKita yang mungkin menjualnya untukmu</string>
    <string name="cariproduk">Cari Produk</string>
    <string name="fun_fact_produk_mu">Fun Fact Tentang Produk Yang Kamu Cari:</string>
    <string name="toko_yang_menyediakan_produk_yang_kamu_cari">Penjual PasKita Yang Menyediakan Produk Yang Kamu Cari :</string>
    <string name="upload_foto_cari">Upload Foto</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="termasuk_ongkir">*Termasuk Ongkir</string>
    <string name="bayar">Bayar</string>
    <string name="catatan_produk">Catatan Untuk Produk Ini</string>
    <string name="masukkan_alamat_pengiriman">Masukkan Alamat Pengiriman</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="kabupaten_atau_kota">Kabupaten atau Kota</string>
    <string name="cek_ongkos_kirim">Cek Ongkos Kirim</string>
    <string name="ongkos_kirim">Ongkos Kirim :</string>
    <string name="alamat_toko_kota_kabupaten">Alamat Toko (Kota/Kabupaten)</string>
    <string name="silahkan_melakukan_pembayaran">Silahkan Melakukan Pembayaran</string>
    <string name="transfer_antar_bank">Transfer Antar Bank</string>
    <string name="no_rekening">No Rekening</string>
    <string name="atas_nama">Bank BSI An.Paskita</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="upload_bukti_pembayaran">Upload Bukti Pembayaran</string>
    <string name="beratt_produk">Berat Produk (gram)</string>
    <string name="paskita">PasKita</string>
    <string name="belanja">Belanja</string>
    <string name="di_proses">Di Proses</string>
    <string name="_1_barang">1 Barang</string>
    <string name="total_belanja">Total Belanja</string>
    <string name="tanya_penjual">Tanya Penjual</string>
    <string name="_19_12_2023">19-12-2023</string>
    <string name="selesaikan_pesanan">Selesaikan Pesanan</string>
    <string name="rincian_pembayaran">Rincian Pembayaran</string>
</resources>