<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bottomnavigation.penjual.DetailProdukPenjual">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/back"
                        android:contentDescription="@string/kembali" />

                </LinearLayout>

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp"
                    app:iss_corner_radius="20"
                    app:iss_auto_cycle="true"
                    app:iss_period="5000"
                    app:iss_delay="1000"
                    app:iss_text_align="CENTER"
                    app:iss_placeholder="@drawable/logo_paskita"  />

                <TextView
                    android:id="@+id/tvNamaProduk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nama_produk"
                    android:fontFamily="@font/dm_sans_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvHargaProduk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_produk"
                    android:fontFamily="@font/dm_sans_bold"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:text="@string/rating"
                        android:fontFamily="@font/dm_sans_bold"
                        android:textSize="12sp"
                        android:textColor="@color/grey_font"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/ivRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/star_kosong"/>

                    <TextView
                        android:id="@+id/tvTerjual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_0_terjual"
                        android:fontFamily="@font/dm_sans_bold"
                        android:textSize="12sp"
                        android:textColor="@color/grey_font"
                        android:textStyle="bold"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/informasi_barang"
                    android:fontFamily="@font/dm_sans_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvKategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori_produk"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginBottom="5dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvDaerah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/asal_daerah_produk"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginBottom="5dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvNamaPenjual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_penjual"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginBottom="5dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvPengiriman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/layanan_pengiriman_tersedia"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginBottom="5dp"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/deskripsi_produk"
                    android:fontFamily="@font/dm_sans_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi_produk"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginBottom="5dp"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sosial_media"
                    android:fontFamily="@font/dm_sans_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvWhatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="14sp"
                    android:drawablePadding="10dp"
                    app:drawableStartCompat="@drawable/whatsapp" />

                <TextView
                    android:id="@+id/tvInstagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instagram"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginBottom="5dp"
                    android:textSize="14sp"
                    android:drawablePadding="10dp"
                    app:drawableStartCompat="@drawable/instagram"/>

                <TextView
                    android:id="@+id/tvTiktok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tiktok"
                    android:fontFamily="@font/dm_sans"
                    android:layout_marginBottom="5dp"
                    android:textSize="14sp"
                    android:drawablePadding="10dp"
                    app:drawableStartCompat="@drawable/tiktok"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>