<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/ivProduk"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/logo_paskita"
                android:layout_gravity="center"
                android:contentDescription="@string/foto_produk" />

            <TextView
                android:id="@+id/tvNamaProduk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nama_produk"
                android:fontFamily="@font/dm_sans_bold"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvPenjual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nama_toko_alamat"
                android:fontFamily="@font/dm_sans"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/rp1_000_000"
                android:fontFamily="@font/dm_sans_bold"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/satu"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/secondary_variant"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/ivRating"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:src="@drawable/star_full"
                    android:contentDescription="@string/upload_foto" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnKeranjang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/masukkan_keranjang"
                android:textStyle="bold"
                android:textColor="@color/secondary"
                android:textSize="8sp"
                android:drawableEnd="@drawable/tambah_keranjang"
                android:background="@drawable/btn_keranjang" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>