<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/belanja"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/dm_sans_bold"
                android:textSize="18sp"
                android:textColor="@color/secondary"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:layout_gravity="center"
                    android:text="@string/_19_12_2023"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:textSize="12sp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvProses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/di_proses"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:textSize="16sp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="50dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/tulisan_paskita"
                    android:contentDescription="@string/upload_foto" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNamaProduk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_produk"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/dm_sans_bold"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvJumlah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_barang"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/dm_sans"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_belanja"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/dm_sans_bold"
                        android:textSize="12sp"
                        android:textColor="@color/dark_gray"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvTotalBelanja"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rp1_000_000"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/dm_sans_bold"
                        android:textSize="18sp"
                        android:textColor="@color/secondary"
                        android:textStyle="bold"/>


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnTanyaPenjual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/baseline_chat_bubble_outline_24"
                android:text="@string/tanya_penjual"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>