<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/ivProduk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_paskita"
                android:layout_gravity="center"
                android:contentDescription="@string/foto_produk" />

            <TextView
                android:id="@+id/tvNamaProduk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nama_produk"
                android:fontFamily="@font/dm_sans_bold"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harga_produk"
                android:fontFamily="@font/dm_sans"
                android:textColor="@color/secondary"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/primary"
                    android:text="@string/edit"
                    android:fontFamily="@font/dm_sans_bold"/>

                <Button
                    android:id="@+id/btnHapus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/hapus"
                    android:fontFamily="@font/dm_sans_bold"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>